# square_solver

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  ringbuffer.cpp  ringbuffer.h  roots.cpp  roots.h  trey.h  treys.cpp  treys.h  utils.cpp  utils.h
test/: square_solver  test.results  test.sh  test.txt
